--- a/client/index.html
+++ b/client/index.html
@@ -3,14 +3,42 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/runninglogo.svg" />
+  <link rel="icon" type="image/svg+xml" href="/favicon/favicon.svg" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PALA MARATHON</title>
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/favicon/favicon-96x96.png" sizes="96x96" />
+  <link rel="shortcut icon" href="/favicon/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="PALA MARATHON" />
+  <link rel="manifest" href="/favicon/site.webmanifest" />
+  <!-- Favicon -->
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="PALA Marathon is an exciting annual event bringing together runners and enthusiasts from around the world. Join us for the ultimate marathon experience!">
+  <meta name="keywords" content="PALA Marathon, marathon, running event, sports event, annual marathon, runners, PALA sports, Kerala, st.thomas college palai">
+  <meta name="author" content="PALA Marathon Team">
+  <!-- SEO Meta Tags -->
+
+  <!-- Open Graph Tags -->
+  <meta property="og:title" content="PALA Marathon - Annual Running Event">
+  <meta property="og:description" content="PALA Marathon is an exciting annual event bringing together runners and enthusiasts from around the world. Join us for the ultimate marathon experience!">
+  <meta property="og:image" content="/favicon/favicon-96x96.png">
+  <meta property="og:type" content="website">
+  <meta property="og:image:type" content="image/png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:url" content="https://palamarathon.efpala.org/">
+  <!-- Open Graph Tags -->
+
+  <!-- Title -->
+  <title>PALA MARATHON</title>
+
+  <!-- Leaflet CSS -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 </head>
 
 <body>
