--- a/client/index.html
+++ b/client/index.html
@@ -18,19 +18,22 @@
   <!-- Favicon -->
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="PALA Marathon is an exciting annual event bringing together runners and enthusiasts from around the world. Join us for the ultimate marathon experience!">
-  <meta name="keywords" content="PALA Marathon, marathon, running event, sports event, annual marathon, runners, PALA sports, Kerala, st.thomas college palai">
+  <meta name="description"
+    content="PALA Marathon is an exciting annual event bringing together runners and enthusiasts from around the world. Join us for the ultimate marathon experience!">
+  <meta name="keywords"
+    content="PALA Marathon, marathon, running event, sports event, annual marathon, runners, PALA sports, Kerala, st.thomas college palai">
   <meta name="author" content="PALA Marathon Team">
   <!-- SEO Meta Tags -->
 
   <!-- Open Graph Tags -->
   <meta property="og:title" content="PALA Marathon - Annual Running Event">
-  <meta property="og:description" content="PALA Marathon is an exciting annual event bringing together runners and enthusiasts from around the world. Join us for the ultimate marathon experience!">
-  <meta property="og:image" content="/favicon/favicon-96x96.png">
+  <meta property="og:description"
+    content="PALA Marathon will be held on 19th January 2024. This annual running event is organized by Lions Club International District 318B, St. Thomas College Palai (Autonomous) 75th Jubilee Celebrations, and Engineer's Forum, Pala.">
+  <meta property="og:image" content="https://palamarathon.efpala.org/favicon/web-app-manifest-192x192.png">
   <meta property="og:type" content="website">
   <meta property="og:image:type" content="image/png">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
+  <meta property="og:image:width" content="192">
+  <meta property="og:image:height" content="192">
   <meta property="og:url" content="https://palamarathon.efpala.org/">
   <!-- Open Graph Tags -->
 
@@ -38,7 +41,8 @@
   <title>PALA MARATHON</title>
 
   <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
 </head>
 
 <body>
