Adds Google site verification meta tag to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -37,6 +37,9 @@
   <meta property="og:url" content="https://palamarathon.efpala.org/">
   <!-- Open Graph Tags -->
 
+  <!-- Google Verify -->
+  <meta name="google-site-verification" content="4McyB7AhpykHxnc0Nq3NgFtB7kQKFGfSiqzPwixiH9U" />
+
   <!-- Title -->
   <title>PALA MARATHON</title>
 
