--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
   <meta name="apple-mobile-web-app-title" content="PALA MARATHON" />
   <link rel="manifest" href="/favicon/site.webmanifest" />
+  <link href="https://fonts.googleapis.com/css2?family=Podkova:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mynerve&display=swap" rel="stylesheet">
   <!-- Favicon -->
 
   <!-- SEO Meta Tags -->
