Revert " payment backend dev test"

--- a/client/index.html
+++ b/client/index.html
@@ -21,7 +21,7 @@
 
   <!-- SEO Meta Tags -->
   <meta name="description"
-    content="PALA Marathon will be held on 19th January 2024. This annual running event is organized by Lions Club International District 318B, St. Thomas College Palai (Autonomous) 75th Jubilee Celebrations, and Engineer's Forum, Pala.">
+    content="PALA Marathon is an exciting annual event bringing together runners and enthusiasts from around the world. Join us for the ultimate marathon experience!">
   <meta name="keywords"
     content="PALA Marathon, marathon, running event, sports event, annual marathon, runners, PALA sports, Kerala, st.thomas college palai">
   <meta name="author" content="PALA Marathon Team">
